--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -22,7 +22,7 @@
     <meta name="twitter:description" content="Express, MongoDB, and Node.js template stylized with Bootstrap.">
     <!-- Insert preview image tag -->
 
-    <title>ThinkCorp</title>
+    <title>TeguhCorp</title>
 </head>
 
 <body>
@@ -34,7 +34,7 @@
         <div class="container py-4 py-md-5">
             <div class="row align-items-center py-5">
                 <div class="col-md-7">
-                    <h1 class="display-3 fw-bold"><i class="fa fa-splotch"></i> ThinkCorp</h1>
+                    <h1 class="display-3 fw-bold"><i class="fa fa-splotch"></i> TeguhCorp</h1>
                     <p class="lead my-3">
                         Creating inventive solutions for complex problems.
                     </p>
@@ -55,43 +55,30 @@
     <!-- Principles Section -->
     <section id="principles" class="bg-primary text-dark">
         <div class="container py-4 py-md-5">
-            <h1 class="font-slab">Principles</h1>
+            <h1 class="font-slab">4 Langkah Mudah</h1>
 
             <div class="row">
                 <div class="col-md-3">
-                    <h2>Modern</h2>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse massa velit,
-                        eleifend condimentum magna ut, pretium hendrerit erat. Morbi nec est porta, iaculis
-                        sapien eu, ultrices arcu.
-                    </p>
+                    <h2>Add BOT tele</h2>
+                        <a class="btn btn-info" href="https://t.me/PembantuTeguhbot">PembantuTeguhbot</a>
                 </div>
 
                 <div class="col-md-3">
-                    <h2>Diverse</h2>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse massa velit,
-                        eleifend condimentum magna ut, pretium hendrerit erat. Morbi nec est porta, iaculis
-                        sapien eu, ultrices arcu.
-                    </p>
+                    <h2>Create new Channel</h2>
+                    <!-- <img src="assets/step2.png" width="100%" alt=""> -->
+                    <img src="assets/step3.png" width="100%" alt="">
                 </div>
 
                 <div class="col-md-3">
-                    <h2>Forward-thinking</h2>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse massa velit,
-                        eleifend condimentum magna ut, pretium hendrerit erat. Morbi nec est porta, iaculis
-                        sapien eu, ultrices arcu.
-                    </p>
+                    <h2>Add BOT in your Channel</h2>
+                    <!-- <img src="assets/step4.png" width="70%" alt=""> -->
+                    <img src="assets/step6.png" width="100%" alt="">
                 </div>
-
+                
                 <div class="col-md-3">
-                    <h2>Practical</h2>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse massa velit,
-                        eleifend condimentum magna ut, pretium hendrerit erat. Morbi nec est porta, iaculis
-                        sapien eu, ultrices arcu.
-                    </p>
+                    <h2>Now you can Enjoy</h2>
+                    <img src="assets/step7.png" width="100%" alt="">
+                    
                 </div>
             </div>
         </div>
@@ -106,13 +93,9 @@
                 <div class="col-md-8">
                     <h2>Our Company</h2>
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin efficitur fringilla sapien sed
-                        posuere.
-                        Aenean arcu tellus, pellentesque id tristique eget, pretium vel metus. Mauris eu mi mauris.
-                        Fusce ac
-                        laoreet dui. Fusce vitae velit nunc.
+                        TeguhCorp
                     </p>
-                    <ul>
+                    <!-- <ul>
                         <li>
                             Lorem ipsum dolor sit amet
                         </li>
@@ -122,13 +105,11 @@
                         <li>
                             Lorem ipsum dolor sit amet
                         </li>
-                    </ul>
+                    </ul> -->
 
                     <h2>Our Mission</h2>
                     <p>
-                        Vestibulum enim mauris, vehicula in ante ut, elementum tincidunt dui. Mauris vulputate malesuada
-                        mauris, hendrerit pellentesque tellus ultricies quis. Vivamus porttitor ullamcorper interdum.
-                        Sed blandit ipsum vel enim sollicitudin, quis facilisis magna aliquet.
+                        Mempermudah kaum
                     </p>
                 </div>
                 <div class="col-md-4">
