--- a/views/layouts/footer.ejs
+++ b/views/layouts/footer.ejs
@@ -3,17 +3,16 @@
     <div class="container text-light">
         <span class="float-end"><a href="#">Back to top</a></span>
         <address>
-            <strong>ThinkCorp, Inc.</strong><br>
-            1355 Market St, Suite 900<br>
-            San Francisco, CA 94103<br>
-            <abbr title="Phone">P:</abbr> (123) 456-7890
+            <strong>TeguhCorp, Inc.</strong><br>
+            Jakarta Raya<br>
+            <abbr title="Phone">P:</abbr> (021) 123-4567
         </address>
 
         <address>
             <strong>Contact</strong><br>
-            <a href="mailto:support@thinkcorp.com">support@thinkcorp.com</a>
+            <a href="mailto:support@thinkcorp.com">support@teguhcorp.com</a>
         </address>
 
-        © 2021 ThinkCorp, Inc. · <a href="/privacy">Privacy</a> · <a href="/tos">Terms</a>
+        © 2024 TeguhCorp, Inc.
     </div>
 </footer>
