--- a/views/layouts/navbar.ejs
+++ b/views/layouts/navbar.ejs
@@ -4,7 +4,7 @@
 
             <a class="navbar-brand" href="/">
                 <img src="/assets/favicon.ico" alt="logo" width="24" height="24" class="d-inline-block align-top">
-                ThinkCorp
+                TeguhCorp
             </a>
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -19,13 +19,13 @@
 
                     <!-- Visitor's Navbar -->
                     <ul class="navbar-nav ms-auto">
-                        <li class="nav-item">
+                        <!-- <li class="nav-item">
                             <a class="nav-link <%= (locals.active === 'blog') ? 'active' : '' %>" href="#">Blog</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link <%= (locals.active === 'contact') ? 'active' : '' %>"
                                href="#">Contact</a>
-                        </li>
+                        </li> -->
                         <li class="nav-item ms-md-3 mb-3 mb-md-0">
                             <button type="button" class="btn btn-primary" data-bs-toggle="modal"
                                     data-bs-target="#signupModal">
@@ -41,10 +41,10 @@
 
                         <!-- Social Media Links -->
                         <li class="nav-item ms-md-4">
-                            <a class="nav-link d-inline-block" href="#" target="_blank" rel="noopener">
-                                <i class="fab fa-twitter"></i>
+                            <a class="nav-link d-inline-block" href="https://github.com/Praz-715/" target="_blank" rel="noopener">
+                                <i class="fab fa-github"></i>
                             </a>
-                            <a class="nav-link d-inline-block ms-2 ms-md-0" href="#" target="_blank" rel="noopener">
+                            <a class="nav-link d-inline-block ms-2 ms-md-0" href="https://instagram.com/th.teguh/" target="_blank" rel="noopener">
                                 <i class="fab fa-instagram"></i>
                             </a>
                         </li>
